# etf-track

./: .gitignore  pyproject.toml
etf_track/: manage.py
etf_track/etf_track/: asgi.py  settings.py  urls.py  wsgi.py
etf_track/etfs/: measurements.py  models.py  reader.py  tests.py  utils.py
etf_track/etfs/fundamentals/: loader.py
etf_track/etfs/holdings/: loader.py  reader.py
etf_track/etfs/management/commands/: add_etf.py  batch_add_etf.py  measure.py  read.py  read_all.py
etf_track/etfs/migrations/: 0001_initial.py  0002_remove_etf_exchange_remove_etf_ticker_and_more.py  0002_remove_measurement_expense_ratio_etf_expense_ratio_and_more.py  0003_holdings.py  0004_fundamentals.py
