[tool.poetry]
name = "etf-track"
version = "0.1.0"
description = "Django application for calculating and exposing simple aggregate stats on ETFs."
authors = ["Jannic Holzer"]
license = "AGPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
