[tool.poetry]
name = "etf-track"
version = "0.1.0"
description = "Django application for calculating and exposing simple aggregate stats on ETFs."
authors = ["Jannic Holzer"]
license = "AGPL-3.0 license"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
psycopg2 = "^2.9.3"
pandas = "^1.4.3"
yfinance = "^0.1.74"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
